--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_PASSWORD=MySecret123
 DB_NAME=simplifier
 DB_ROOT_PASSWORD=MySuperSecret
 SIMPLIFIER_VERSION=6.5
+SIMPLIFIER_DATA_VOL=/opt/simplifier/data
