--- a/simplifier-standalone.yml
+++ b/simplifier-standalone.yml
@@ -1,17 +1,12 @@
 version: '3.5'
 services:
   mysql:
-    image: mysql:8.0
+    image: mysql:5.7
     container_name: mysql
     volumes:
-      - /var/lib/simplifier/mysql:/var/lib/mysql
+      - ${SIMPLIFIER_DATA_VOL}/mysql:/var/lib/mysql
     restart: always
-    command: --max_allowed_packet=1073741824 --wait_timeout=28800 --default-auth=mysql_native_password
-    environment:
-      - MYSQL_DATABASE=${DB_NAME}
-      - MYSQL_USER=simplifier
-      - MYSQL_PASSWORD=${DB_PASSWORD}
-      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
+    command: --max_allowed_packet=1073741824 --wait_timeout=28800
     networks:
       - internal-network
   simplifier:
@@ -19,7 +14,7 @@ services:
     container_name: simplifier
     restart: always
     volumes:
-      - /var/lib/simplifier/data:/opt/simplifier/data
+      - ${SIMPLIFIER_DATA_VOL}:/opt/simplifier/data
     environment:
       - VIRTUAL_HOST=${SIMPLIFIER_HOSTNAME}
       - DB=mysql
