--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SIMPLIFIER_HOSTNAME=example.simplifier.cloud
-DB_PASSWORD=MySecret123
+DB_PASSWORD=simplifier
 DB_NAME=simplifier
-DB_ROOT_PASSWORD=MySuperSecret
+DB_ROOT_PASSWORD=root
 SIMPLIFIER_VERSION=6.5
 SIMPLIFIER_DATA_VOL=/opt/simplifier/data
