--- a/mysql/config.yaml
+++ b/mysql/config.yaml
@@ -1,7 +1,7 @@
 database-owner: simplifier
 error-level: onGrant
 databases:
-  - simplifier_content
-  - simplifier_keyvalue
-  - simplifier_session
-  - simplifier_jsonstore
+  - ${DB_PREFIX}_content
+  - ${DB_PREFIX}_keyvalue
+  - ${DB_PREFIX}_session
+  - ${DB_PREFIX}_jsonstore
